# stratum

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  TODO.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
calcine/: __init__.py  exceptions.py  extraction.py  pipeline.py  schema.py  serializers.py
calcine/features/: __init__.py  base.py
calcine/sources/: __init__.py  base.py  bundle.py  dataframe.py  file.py  http.py
calcine/stores/: __init__.py  base.py  file.py  memory.py  parquet.py
docs/: architecture.md  extending.md  generation-report.md  schema.md
examples/: 01_text_features.py  02_embeddings.py  03_multi_source.py  04_timeseries_scale.py  05_weak_points.py  06_partitioned_generation.py  07_batch_extract_benchmark.py  README.md  basic_usage.py
examples/data/: generate_data.py
hooks/: pre-commit
stratum/: pipeline.py
stratum/features/: base.py
stratum/stores/: base.py
tests/: conftest.py  test_fanout.py  test_pipeline.py  test_schema.py  test_sources.py  test_stores.py
