[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calcine"
version = "0.1.0"
description = "A source-agnostic, type-agnostic featurization pipeline framework"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = [
    "feature engineering",
    "machine learning",
    "feature store",
    "pipeline",
    "async",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = ["numpy>=1.21", "pandas>=1.5"]

[project.optional-dependencies]
http    = ["httpx>=0.24"]
parquet = ["pyarrow>=10"]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
    # Pull in optional deps for testing
    "pyarrow>=10",
]

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths   = ["tests"]

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["calcine"]

[tool.mypy]
python_version       = "3.10"
strict               = false
ignore_missing_imports = true
